[tool.poetry]
name = "mobile_network_analytics"
version = "0.1.0"
description = "Application for calculating mobile subscriber and network statistics from raw data"
authors = ["Thanos Karafyllis <thankara1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.0"
sqlalchemy = "^2.0.44"
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"
pymysql = "^1.1.2"
uvicorn = "^0.38.0"
celery = {extras = ["redis"], version = "^5.5.3"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
